--- a/АИСТ/АИСТ.csproj
+++ b/АИСТ/АИСТ.csproj
@@ -94,11 +94,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\algoritms\algoritms.cs" />
+    <Compile Include="Class\enums\enums.cs" />
     <Compile Include="Class\essence\Assortiment.cs" />
     <Compile Include="Class\AutoSet\AutoSetGenerate.cs" />
     <Compile Include="Class\essence\Customers.cs" />
     <Compile Include="Class\essence\listProduct.cs" />
+    <Compile Include="Class\Setttings\Client_type_disc.cs" />
     <Compile Include="Class\Setttings\Generate_Setttings.cs" />
+    <Compile Include="Class\Setttings\Prod_type_dis.cs" />
+    <Compile Include="Class\Setttings\Promo_types.cs" />
     <Compile Include="Class\SQL\SQL_Helper.cs" />
     <Compile Include="Class\essence\Info.cs" />
     <Compile Include="Class\essence\Tabs.cs" />
@@ -132,6 +137,12 @@
     </Compile>
     <Compile Include="Forms\menu.Designer.cs">
       <DependentUpon>menu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Promo_types_Setings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Promo_types_Setings.Designer.cs">
+      <DependentUpon>Promo_types_Setings.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -167,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\menu.resx">
       <DependentUpon>menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Promo_types_Setings.resx">
+      <DependentUpon>Promo_types_Setings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
