--- a/АИСТ/АИСТ.csproj
+++ b/АИСТ/АИСТ.csproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <Compile Include="Class\algoritms\algoritms.cs" />
     <Compile Include="Class\algoritms\Client_Tab.cs" />
+    <Compile Include="Class\algoritms\Prod_tab.cs" />
     <Compile Include="Class\enums\enums.cs" />
     <Compile Include="Class\essence\Assortiment.cs" />
     <Compile Include="Class\AutoSet\AutoSetGenerate.cs" />
