Закончен первичный анализ, проведена реорганизация

--- a/АИСТ/АИСТ.csproj
+++ b/АИСТ/АИСТ.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Class\Setttings\Client_type_disc.cs" />
     <Compile Include="Class\Setttings\Generate_Setttings.cs" />
     <Compile Include="Class\Setttings\Promo_types.cs" />
+    <Compile Include="Class\Setttings\Types.cs" />
     <Compile Include="Class\SQL\SQL_Helper.cs" />
     <Compile Include="Class\essence\Info.cs" />
     <Compile Include="Class\essence\Tabs.cs" />
