--- a/АИСТ/АИСТ.csproj
+++ b/АИСТ/АИСТ.csproj
@@ -95,15 +95,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\algoritms\algoritms.cs" />
+    <Compile Include="Class\algoritms\Final_product_group.cs" />
+    <Compile Include="Class\algoritms\Product_for_list.cs" />
     <Compile Include="Class\essence\Client_Tab.cs" />
     <Compile Include="Class\essence\Prod_tab.cs" />
     <Compile Include="Class\enums\enums.cs" />
     <Compile Include="Class\essence\Assortiment.cs" />
     <Compile Include="Class\AutoSet\AutoSetGenerate.cs" />
     <Compile Include="Class\essence\Customers.cs" />
+    <Compile Include="Class\essence\Table_for_strategy.cs" />
     <Compile Include="Class\Setttings\listProductOverRules.cs" />
     <Compile Include="Class\Setttings\Generate_Setttings.cs" />
-    <Compile Include="Class\essence\Promo_types.cs" />
+    <Compile Include="Class\essence\Promo_strategy.cs" />
     <Compile Include="Class\Setttings\Types.cs" />
     <Compile Include="Class\SQL\SQL_Helper.cs" />
     <Compile Include="Class\algoritms\Info.cs" />
